--- a/package.json
+++ b/package.json
@@ -26,7 +26,14 @@
   "dependencies": {
     "encrypted-types": "^0.0.4",
     "@fhevm/solidity": "^0.7.0",
-    "@zama-fhe/oracle-solidity": "^0.1.0"
+    "@zama-fhe/oracle-solidity": "^0.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vite": "^4.4.5",
+    "viem": "^1.0.0",
+    "@rainbow-me/rainbowkit": "^1.0.0",
+    "wagmi": "^1.0.0",
+    "crypto-js": "^4.1.1"
   },
   "devDependencies": {
     "@fhevm/hardhat-plugin": "^0.0.1-6",
@@ -39,6 +46,10 @@
     "@types/chai": "^4.3.20",
     "@types/mocha": "^10.0.10",
     "@types/node": "^20.19.8",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/crypto-js": "^4.1.1",
+    "@vitejs/plugin-react": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
     "@zama-fhe/relayer-sdk": "^0.1.2",
@@ -78,7 +89,10 @@
     "test": "hardhat test",
     "test:sepolia": "hardhat test --network sepolia",
     "build:ts": "tsc --project tsconfig.json",
-    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
+    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "overrides": {
     "ws@>=7.0.0 <7.5.10": ">=7.5.10",
