--- a/package.json
+++ b/package.json
@@ -24,19 +24,12 @@
     "hardhat"
   ],
   "dependencies": {
-    "encrypted-types": "^0.0.4",
-    "@fhevm/solidity": "^0.7.0",
+    "@fhevm/solidity": "^0.8.0",
     "@zama-fhe/oracle-solidity": "^0.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vite": "^4.4.5",
-    "viem": "^1.0.0",
-    "@rainbow-me/rainbowkit": "^1.0.0",
-    "wagmi": "^1.0.0",
-    "crypto-js": "^4.1.1"
+    "encrypted-types": "^0.0.4"
   },
   "devDependencies": {
-    "@fhevm/hardhat-plugin": "^0.0.1-6",
+    "@fhevm/hardhat-plugin": "^0.1.0",
     "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
     "@nomicfoundation/hardhat-ethers": "^3.1.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.1.0",
@@ -46,16 +39,13 @@
     "@types/chai": "^4.3.20",
     "@types/mocha": "^10.0.10",
     "@types/node": "^20.19.8",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/crypto-js": "^4.1.1",
-    "@vitejs/plugin-react": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "^8.37.0",
-    "@zama-fhe/relayer-sdk": "^0.1.2",
+    "@zama-fhe/relayer-sdk": "^0.2.0",
     "chai": "^4.5.0",
     "chai-as-promised": "^8.0.1",
     "cross-env": "^7.0.3",
+    "dotenv": "^17.2.2",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "ethers": "^6.15.0",
@@ -89,10 +79,7 @@
     "test": "hardhat test",
     "test:sepolia": "hardhat test --network sepolia",
     "build:ts": "tsc --project tsconfig.json",
-    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain",
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
   },
   "overrides": {
     "ws@>=7.0.0 <7.5.10": ">=7.5.10",
@@ -103,8 +90,7 @@
     "micromatch@<4.0.8": ">=4.0.8",
     "elliptic@<6.6.0": ">=6.6.0",
     "elliptic@<6.5.6": ">=6.5.6",
-    "undici@>=6.0.0 <6.21.1": ">=6.21.1",
-    "undici@>=4.5.0 <5.28.5": ">=5.28.5",
+    "undici": "5.28.5",
     "elliptic@<=6.6.0": ">=6.6.1",
     "tar-fs@>=2.0.0 <2.1.2": ">=2.1.2",
     "axios@>=1.0.0 <1.8.2": ">=1.8.2",
