--- a/src/package.json
+++ b/src/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
     "@zama-fhe/relayer-sdk": "^0.2.0",
-    "crypto-js": "^4.2.0"
+    "crypto-js": "^4.2.0",
+    "viem": "^2.21.0",
+    "@rainbow-me/rainbowkit": "^2.1.0",
+    "@tanstack/react-query": "^5.59.0",
+    "wagmi": "^2.12.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
-    "vite": "^7.1.5",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vite": "^7.1.5"
   }
 }
